service2.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpd-service
spec:
  type: ClusterIP
  selector:
    app: httpd
  ports:
    - protocol: httpd
      port: 80
      targetPort: 80
