ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80

      - path: /
        pathType: Prefix
        backend:
          service:
            name: httpd-service
            port:
              number: 80    

      - path: /
        pathType: Prefix
        backend:
          service:
            name: mysql-service
            port:
              number: 3306

      - path: /
        pathType: Prefix
        backend:
          service:
            name: redis-service
            port:
              number: 6379
